# llm-applications

./: pyproject.toml
